--- a/html_css/style.css
+++ b/html_css/style.css
@@ -17,11 +17,31 @@ h3 {
 }
 
 body {
-	background-color: cyan;
 }
 
 .post {
-	background-color: white;
+	background-color: orange;
 	padding: 10px;
-	border: 5px solid black;
+	border: 5px solid gray;
+}
+
+.imagem-programacao {
+	border: solid black 10px;
+}
+
+.texto-lorem {
+	margin-top: 5px;
+	margin-bottom: 15px;
+}
+
+h3 {
+	margin-bottom: 10px;
+	margin-top: 20px;
+}
+
+footer {
+	background-color: black;
+	margin-top: 20px;
+	padding: 5px 5px;
+	border: 10px solid blue;
 }
