--- a/html_css/style.css
+++ b/html_css/style.css
@@ -1,5 +1,7 @@
 p {
 	color: blue;
+	justify-content: center;
+	margin-left: 10px;
 }
 
 a {
@@ -17,16 +19,20 @@ h3 {
 }
 
 body {
+	max-width: 900px;
+	margin: auto;
+	background-color: gray;
 }
-
 .post {
 	background-color: orange;
 	padding: 10px;
-	border: 5px solid gray;
+	border: 5px solid black;
+	width: 900px;
 }
 
 .imagem-programacao {
 	border: solid black 10px;
+	width: 800px;
 }
 
 .texto-lorem {
@@ -37,6 +43,7 @@ body {
 h3 {
 	margin-bottom: 10px;
 	margin-top: 20px;
+	margin-left: 15px;
 }
 
 footer {
@@ -44,4 +51,28 @@ footer {
 	margin-top: 20px;
 	padding: 5px 5px;
 	border: 10px solid blue;
+	width: 900px;
+}
+
+h2 {
+	text-transform: uppercase;
+	font-family: 'Times New Roman', Times, serif;
+	font-size: 40px;
+	text-decoration: underline;
+	font-style: italic;
+	color: darkblue;
+}
+
+ul {
+	list-style-type: none;
+	padding-left: 10px;
+}
+
+ul li a {
+	color: red;
+}
+
+.post header .imagem-programacao {
+	margin-left: 40px;
+	margin-right: 40px;
 }
